--- a/data.yaml
+++ b/data.yaml
@@ -1592,6 +1592,7 @@ library:
       value: 201907
     gcc:
     - since: C++20
+      depends: '(__GCC_ATOMIC_INT_LOCK_FREE | __GCC_ATOMIC_LONG_LOCK_FREE | __GCC_ATOMIC_CHAR_LOCK_FREE) & 2'
       value: 201907
     msvc:
     - since: C++20
@@ -3730,7 +3731,6 @@ library:
       value: 201304
     gcc:
     - since: C++14
-      depends: '!defined(_GLIBCXX_DEBUG)'
       value: 201304
     msvc:
     - value: 201304
