GCC updated __cpp_structured_bindings

--- a/data.yaml
+++ b/data.yaml
@@ -1194,6 +1194,8 @@ language:
     gcc:
     - since: C++17
       value: 201606
+    - since: C++26
+      value: 202403
     msvc:
     - since: C++17
       value: 201606
