--- a/data.yaml
+++ b/data.yaml
@@ -4305,7 +4305,9 @@ library:
   - value: 202403
     papers: P2944R3
   support:
-    clang: null
+    clang:
+    - since: C++26
+      value: 202403
     gcc: null
     msvc: null
 - name: __cpp_lib_remove_cvref
