Clang now defines __cpp_sized_deallocation by default in C++14 and later

--- a/data.yaml
+++ b/data.yaml
@@ -1141,6 +1141,8 @@ language:
     cppreference-description: '[[cpp/memory/new/operator_delete|Sized deallocation]]'
   support:
     clang:
+    - since: C++14
+      value: 201309
     - option: -fsized-deallocation
       value: 201309
     gcc:
