--- a/data.yaml
+++ b/data.yaml
@@ -4077,7 +4077,9 @@ library:
     cppreference-description: '{{ltt|cpp/ranges/concat_view|std::views::concat}}'
   support:
     clang: null
-    gcc: null
+    gcc:
+    - since: C++26
+      value: 202403
     msvc: null
 - name: __cpp_lib_ranges_contains
   header_list: algorithm
